--- a/goit-react-native-06/app.json
+++ b/goit-react-native-06/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "goit-react-native-02",
-    "slug": "goit-react-native-02",
+    "slug": "react-native",
     "version": "1.0.0",
     "orientation": "default",
     "icon": "./assets/icon.png",
@@ -14,7 +14,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -22,10 +24,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.bogdan0109.reactnative"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "db0aede0-6c9a-42bd-9978-3ca2b08d4405"
+      }
+    },
+    "owner": "bogdan0109"
   }
 }
