--- a/goit-react-native-06/package.json
+++ b/goit-react-native-06/package.json
@@ -17,10 +17,12 @@
     "expo": "~47.0.9",
     "expo-app-loading": "~2.1.1",
     "expo-camera": "~13.1.0",
+    "expo-cli": "^6.1.0",
     "expo-font": "~11.0.1",
     "expo-location": "~15.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
@@ -29,7 +31,8 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
